# vdes_portal

./: .gitignore  class_gt3_35_common.json  class_json_example.json  docker-compose.dev.yml  docker-compose.prod.yml
backend/: Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/app/: cars.py  config.py  entry_list.py  main.py  models.py
backend/app/race_results/: models.py
backend/app/redis_interface/: races_namespace.py  redis_namespace.py  users_namespace.py
frontend/: Dockerfile  dev.Dockerfile  next.config.mjs  package-lock.json  package.json  prod.Dockerfile
frontend/app/: globals.css  layout.tsx  main_content.tsx  page.tsx  race_item.tsx
frontend/app/admin/: page.tsx  race_list.tsx
frontend/app/admin/race/[raceId]/: edit_race_form.tsx  page.tsx
frontend/app/admin/race/create/: create_race_form.tsx  page.tsx
frontend/app/profile/: page.tsx  user_data_form.tsx
frontend/app/race/[raceId]/: admin_drivers.tsx  car_dropdown.tsx  description.tsx  drivers.tsx  page.tsx  race_page.tsx  race_register_form.tsx  results.tsx
frontend/components/: copy_button.tsx  header.tsx  main_page_link.tsx  weather_summary.tsx
frontend/models/: auth.tsx  races.tsx
frontend/utils/: api.tsx  date_formats.tsx
nginx_conf/: default.dev.conf  default.prod.conf
storage/redis/: dump.rdb
