[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["An3loN <vladrorokin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.3"}
httpx = "^0.27.2"
steamsignin = "^1.1.1"
cryptocode = "^0.1"
redis = "^5.1.1"
pydantic-settings = "^2.6.0"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
